[package]
name = "rsfq"
authors = ["alejandrogzi <alejandrxgzi@gmail.com>"]
version = "0.0.2"
edition = "2021"
homepage = "https://github.com/alejandrogzi/rsfq"
repository = "https://github.com/alejandrogzi/rsfq"
description = "another fastq downloader but in rust"
readme = "README.md"
keywords = ["fq", "fastq", "download", "sra"]
categories = ["command-line-utilities", "science"]
license = "MIT"

[dependencies]
clap = { version = "^4.0", features = ["derive"] }
num_cpus = "1.16.0"
log = "0.4.14"
simple_logger = "5.0.0"
regex = "1.11.1"
once_cell = "1.20.3"
reqwest = { version = "0.12.12", default-features = false, features = [
    "rustls-tls",
] }
tokio = { version = "1.43.0", features = [
    "rt-multi-thread",
    "macros",
    "process",
] }
md5 = "0.7.0"
walkdir = "2.5.0"
futures = "0.3.31"

[profile.release]
lto = true
opt-level = 3
